hphp/hack/test/typecheck/construct/parent_construct1.php.exp
File "parent_construct1.php", line 36, characters 32-36:
An array cannot be unpacked into the required arguments of a function (Typing[4359])
File "parent_construct1.php", line 15, characters 19-29:
Definition is here
